[package]
name = "logged_fu_skater"
version = "1.0.0"
authors = ["AleSod <alexander.soderholm91@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/LoggedFuSkater/rust"
readme = "README.MD"
description = "Human readable string obfuscation library."

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4.2"
