[package]
name = "logged_fu_skater"
version = "1.0.1"
authors = ["AleSod <alexander.soderholm91@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/LoggedFuSkater/rust"
readme = "README.MD"
description = "Human readable string obfuscation library."

[[test]]
name = "implementation_test"
path = "tests/implementation_test.rs"
required-features = ["default-implementations"]

[features]
default-implementations = []

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4.2"
